@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>    
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
     <script src="{% static 'base/js/announcement.js' %}" ></script>
     <link rel="stylesheet" href="{% static 'font-awesome/css/font-awesome.min.css' %}" type="text/css" >
     <link rel="stylesheet" href="{% static 'base/css/base_style.css' %}" type="text/css" >
